# drafter.js

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CMakeLists.txt  README.md  circle.yml  configure  drafter.d.ts  drafterjs.gypi  index.coffee  package.json
.circleci/: config.yml
.github/workflows/: run-test.yml
scripts/: build  emcbuild.sh  emcclean.sh  parse.js  release.sh  test-validate.js  test.js  wrap.js
scripts/fixtures/: fail.apib
src/: CMakeLists.txt  cparse.cc  cparse.h  drafter.coffee  options.coffee  post.js
src/rules/: mson-inheritance.coffee  mson-member-type-name.coffee  mson-mixin.coffee  rule.coffee
test/: await-test.js  callback-test.js  dummy-test.coffee  fixtures-test.js  options-test.js  params-test.js  parse-test.js  promise-test.js  sync-test.js  validate-test.js
test/fixtures/: blueprint.apib  blueprint.ast.json  blueprint.parseresult+sourcemap.json  blueprint.parseresult.json  dataStructures.apib  dataStructures.ast.json  invalid.apib  unicode.apib
test/integration/: cli-test.coffee
test/performance/: perf-drafter.js
test/smoke/: typing-test.coffee
test/unit/: drafter-test.coffee
